client/hosting-overview/components/style.scss
@import "@wordpress/base-styles/breakpoints";

.hosting-overview {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: auto auto;
	grid-column-gap: 33px;
	grid-row-gap: 38px;
}

.hosting-overview__card {
	border-radius: 4px;
	border: 1px solid var(--studio-gray-5);
	box-shadow: none;
	padding: 22px;
	width: 100%;
	height: 100%;
}

.hosting-overview__plan {
	grid-column: 1 / 2;
	grid-row: 1 / 2;
}

.hosting-overview__quick-actions {
	grid-column: 2 / 3;
	grid-row: 1 / 2;
}

.hosting-overview__active-domains {
	grid-column: 1 / 3;
	grid-row: 2 / 3;
}

@media ( max-width: $break-xlarge ) {
	.hosting-overview {
		grid-template-columns: 1fr;
		grid-template-rows: auto auto auto;
		grid-row-gap: 16px;
	}

	.hosting-overview__plan,
	.hosting-overview__quick-actions,
	.hosting-overview__active-domains {
		grid-column: 1 / 2;
		grid-row: auto;
	}
}

.hosting-overview__plan-card-header,
.hosting-overview__plan-price {
	display: flex;
	margin-bottom: 8px;
}

.hosting-overview__plan-card-title,
.hosting-overview__plan-price {
	color: var(--studio-gray-100);
	flex: 1;
	font-feature-settings: "clig" off, "liga" off;
	font-family: "SF Pro", $sans;
	font-size: rem(28px); //typography-exception
	font-style: normal;
	line-height: 32px;
}

a.hosting-overview__link-button {
	color: var(--Primary-Blue, #007cba);
	font-family: "SF Pro Text", $sans;
	font-size: $font-body-extra-small;
	font-style: normal;
	line-height: 16px;
	text-decoration-line: underline;
}

.hosting-overview__card-header {
	display: flex;
	gap: var(--grid-unit-15, 12px);
	margin-bottom: 16px;
}

.hosting-overview__card-title {
	color: var(--studio-gray-100);
	flex: 1;
	font-feature-settings: "clig" off, "liga" off;
	font-family: "SF Pro Display", $sans;
	font-size: $font-title-small;
	font-style: normal;
	font-weight: 500;
	line-height: 26px;
	letter-spacing: 0.38px;
}


.hosting-overview__plan-info {
	color: var(--studio-gray-80);
	font-family: "SF Pro Text", $sans;
	font-size: $font-body-extra-small;
	font-style: normal;
	line-height: 16px;
	margin-bottom: 4px;
}

.hosting-overview__plan-storage {
	border-radius: 4px;
	border: 1px solid var(--studio-gray-0);
	background: var(--studio-gray-0);
	display: flex;
	flex-direction: column;
	gap: var(--grid-unit-30, 24px);
	padding: var(--grid-unit-30, 24px);
	color: var(--studio-gray-80, #2c3338);
	font-family: "SF Pro Text", $sans;
	font-size: $font-body-extra-small;
	font-style: normal;
	line-height: 16px;
	margin-top: 30px;
}

.hosting-overview__plan-storage-title-wrapper,
.hosting-overview__plan-storage-title {
	display: flex;
	align-items: center;
}

.hosting-overview__plan-storage-title {
	flex: 1;
	text-transform: uppercase;
}

.hosting-overview__plan-storage-footer {
	text-align: right;
}

.hosting-overview__actions-list {
	list-style: none;
	margin: 0;
}

.hosting-overview__action {
	border-bottom: 1px solid var(--gutenberg-gray-100, #f0f0f0);
	padding: var(--grid-unit-15, 12px) 0;

	svg {
		color: var(--studio-gray-30);
		margin-right: 8px;
		width: 20px;
		height: 20px;
	}


	&:last-child {
		border-bottom: none;
	}
}

.hosting-overview__action-button {
	display: flex;
	justify-content: space-between;
	color: var(--studio-gray-100);
	font-family: "SF Pro Text", $sans;
	font-size: $font-body-small;
	font-style: normal;
	line-height: 20px;
	letter-spacing: -0.15px;

	&:hover,
	&:visited,
	&:active,
	&:focus {
		color: var(--studio-gray-100);
		text-decoration: none;
	}
}

.hosting-overview__action-text {
	display: flex;
	align-items: center;

	.hosting-overview__dashicon {
		color: var(--studio-gray-30);
		margin-right: 8px;
	}
}

